--- a/app/views/web/bulletins/_form.html.slim
+++ b/app/views/web/bulletins/_form.html.slim
@@ -7,31 +7,10 @@
             = @bulletin.new_record? ? t('bulletins.new.title') : t('bulletins.edit.title')
             - if @bulletin.persisted?
                 = image_tag @bulletin.image, class: 'card-img-top', style: 'height: 200px; object-fit: contain'
-          = simple_form_for @bulletin, local: true, html: { novalidate: true, data: { turbo: false } } do |f|
-            = f.input :title,
-                      label: t('simple_form.labels.bulletin.title'),
-                      placeholder: t('simple_form.placeholders.bulletin.title'),
-                      required: true
-
-            = f.input :description,
-                      label: t('simple_form.labels.bulletin.description'),
-                      placeholder: t('simple_form.placeholders.bulletin.description'),
-                      as: :text,
-                      required: true
-
-            = f.input :category_id,
-                      label: t('simple_form.labels.bulletin.category_id'),
-                      collection: Category.all,
-                      value_method: :id,
-                      label_method: :name,
-                      include_blank: t('bulletins.new.category_prompt'),
-                      required: true
-
-            = f.input :image,
-                      label: t('simple_form.labels.bulletin.image'),
-                      as: :file
-
+          = simple_form_for @bulletin, local: true do |f|
+            = f.input :title
+            = f.input :description, as: :text
+            = f.association :category, required: true, prompt: true
+            = f.input :image, as: :file
             .d-grid
-              = f.button :submit,
-                         @bulletin.new_record? ? t('simple_form.buttons.crt_bul') : t('simple_form.buttons.upd_bul'),
-                         class: 'btn btn-primary btn-lg'
+              = f.button :submit, class: 'btn btn-primary btn-lg'
