--- a/app/views/web/bulletins/_search_form.html.slim
+++ b/app/views/web/bulletins/_search_form.html.slim
@@ -1,26 +1,17 @@
 .container.mt-4
   = simple_form_for @q, url: root_path, method: :get, html: { class: 'mb-4' } do |f|
-    .row.g-3.align-items-end
+    .row.g-3.align-items-center
       .col-md-6
         = f.input :title_or_description_cont,
-                  label: t('bulletins.index.search_label'),
-                  placeholder: t('bulletins.index.search_placeholder'),
-                  input_html: { class: 'form-control' },
-                  wrapper_html: { class: 'mb-0' },
                   required: false
       .col-md-3
         = f.input :category_id_eq,
-                  label: t('bulletins.index.category_label'),
-                  collection: Category.all,
+                  collection: Category.all.map { |s| [s.name] },
                   include_blank: t('bulletins.index.all_categories'),
-                  input_html: { class: 'form-select' },
-                  wrapper_html: { class: 'mb-0' },
                   required: false
-      .col-md-2.d-flex.gap-2.align-items-end
+      .col-md-2.d-flex.gap-2
         = f.button :submit,
-                   t('bulletins.index.search_button'),
-                   class: 'btn btn-primary flex-fill',
-                   data: { turbo: false }
+                   class: 'btn btn-primary flex-fill'
         = link_to t('bulletins.index.reset_button'),
                   root_path,
                   class: 'btn btn-secondary flex-fill'
