--- a/app/views/web/admin/categories/edit.html.slim
+++ b/app/views/web/admin/categories/edit.html.slim
@@ -4,4 +4,4 @@
       .card.shadow-sm
         .card-body
           h1.card-title.text-center.mb-4 = t('categories.edit.title')
-          = render 'form'
+          = render 'form', category: @category
