--- a/app/views/web/admin/categories/_form.html.slim
+++ b/app/views/web/admin/categories/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, @category], html: { class: 'needs-validation', novalidate: true } do |f|
+= simple_form_for [:admin, category], html: { class: 'needs-validation', novalidate: true } do |f|
   .mb-3
     = f.input :name
 
